fixed menu whitespace

--- a/src/less/style/_nav.less
+++ b/src/less/style/_nav.less
@@ -25,6 +25,10 @@
 		&::before {
 			content: none;
 		}
+		
+		.dropdown-menu>li>a {
+			white-space: normal;
+		}
 	}
 	
 	&-nav {
@@ -122,7 +126,6 @@
 	justify-content: space-between;
 	align-items: center;
 	transition: 0s all;
-	white-space: normal;
 }
 
 .dropdown-submenu {
